# saizeriya

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  cspell.json  index.html  mise.toml  pyproject.toml  saizeriya.html  search.js
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: update-shops.yml
saizeriya/: __init__.py  cli.py  client.py  fetch_menu.py  forms.py  page_parser.py  process_qr.py  shops.py  types.py
saizeriya/_mock/: __init__.py  server.py  templates.py
saizeriya/_mock/static/: client.js  dashboard.css  style.css
scripts/: update_shops.py
skills/saizeriya/: SKILL.md
tests/: test_client.py  test_fetch_menu.py  test_forms.py  test_page_parser.py  test_update_shops.py
